# awful-auth

./: Dockerfile  README.md  pyproject.toml  scripts.py
app/: config.py  logging_hook.py  main.py  sa_utils.py  verification_cache.py
app/models/: error.py  goon_auth.py
app/routers/: goon_auth.py
src/: server.py  settings.py
tests/: base.py  test_full_auth.py  test_generate_challenge.py  test_update_auth.py  test_verification_auth.py  test_verify_challenge.py
tests/content/: hash-profile-template.html
